Fix issue where VisualVM Plugin does not display error when connecting to invalid URL